force-app/main/default/objects/Zip_Assignment_Change__c/Zip_Assignment_Change__c.object-meta.xml
<CustomObject>
    <description>Change record for the Zip Assignment</description>
    <label>Zip Assignment Change</label>
    <nameField>
        <displayFormat>ZipChange-{000000000}</displayFormat>
        <label>Zip Change Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip Assignment Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>