force-app/main/default/objects/Zip_Assignment_Change__c/fields/AccountQueryEnd__c.field-meta.xml
<CustomField>
    <fullName>AccountQueryEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The time the query ends.</inlineHelpText>
    <label>Account Query End</label>
    <type>DateTime</type>
</CustomField>