force-app/main/default/objects/Zip_Assignment_Change__c/fields/AccountQueryStart__c.field-meta.xml
<CustomField>
    <fullName>AccountQueryStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start time for the account query</inlineHelpText>
    <label>Account Query Start</label>
    <type>DateTime</type>
</CustomField>