force-app/main/default/objects/Zip_Assignment_Change__c/fields/Accounts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Updated__c</fullName>
    <description>The Number of accounts updated.</description>
    <inlineHelpText>The Number of accounts updated.</inlineHelpText>
    <label>Accounts Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>