force-app/main/default/objects/Zip_Assignment_Change__c/fields/AccountsEnd__c.field-meta.xml
<CustomField>
    <fullName>AccountsEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the accounts/contacts end?</inlineHelpText>
    <label>Accounts End</label>
    <type>DateTime</type>
</CustomField>