force-app/main/default/objects/Zip_Assignment_Change__c/fields/AccountsStart__c.field-meta.xml
<CustomField>
    <fullName>AccountsStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the accounts/contacts start?</inlineHelpText>
    <label>Accounts Start</label>
    <type>DateTime</type>
</CustomField>