force-app/main/default/objects/Zip_Assignment_Change__c/fields/AccountTeamsUpdated__c.field-meta.xml
<CustomField>
    <fullName>AccountTeamsUpdated__c</fullName>
    <inlineHelpText>The number of account teams updated as part of this change.</inlineHelpText>
    <label>Account Teams Updated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>