force-app/main/default/objects/Zip_Assignment_Change__c/fields/Contacts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Updated__c</fullName>
    <description>The number of Contacts updated.</description>
    <inlineHelpText>The number of Contacts updated.</inlineHelpText>
    <label>Contacts Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>