force-app/main/default/objects/Zip_Assignment_Change__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did an exception occur during processing?</inlineHelpText>
    <label>Exception?</label>
    <type>Checkbox</type>
</CustomField>