force-app/main/default/objects/Zip_Assignment_Change__c/fields/Leads_Updated__c.field-meta.xml
<CustomField>
    <fullName>Leads_Updated__c</fullName>
    <description>The number of Leads updated.</description>
    <inlineHelpText>The number of Leads updated.</inlineHelpText>
    <label>Leads Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>