force-app/main/default/objects/Zip_Assignment_Change__c/fields/LeadsEnd__c.field-meta.xml
<CustomField>
    <fullName>LeadsEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the leads end?</inlineHelpText>
    <label>Leads End</label>
    <type>DateTime</type>
</CustomField>