force-app/main/default/objects/Zip_Assignment_Change__c/fields/LeadsStart__c.field-meta.xml
<CustomField>
    <fullName>LeadsStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the leads start?</inlineHelpText>
    <label>Leads Start</label>
    <type>DateTime</type>
</CustomField>