force-app/main/default/objects/Zip_Assignment_Change__c/fields/OwnershipType__c.field-meta.xml
<CustomField>
    <fullName>OwnershipType__c</fullName>
    <inlineHelpText>Which type of ownership are we updating with this change?</inlineHelpText>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner Fields</fullName>
            </value>
            <value>
                <fullName>Team Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>