force-app/main/default/objects/Zip_Assignment_Change__c/fields/Parent_Accounts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Parent_Accounts_Updated__c</fullName>
    <description>count of Parent Accounts that had an owner changed</description>
    <label>Parent Accounts Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>