force-app/main/default/objects/Zip_Assignment_Change__c/fields/Parent_Process_End__c.field-meta.xml
<CustomField>
    <fullName>Parent_Process_End__c</fullName>
    <description>The date/time the processing for this change ended.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Process End</label>
    <type>DateTime</type>
</CustomField>