force-app/main/default/objects/Zip_Assignment_Change__c/fields/Parent_Process_Start__c.field-meta.xml
<CustomField>
    <fullName>Parent_Process_Start__c</fullName>
    <description>The date/time the processing for this change started.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Process Start</label>
    <type>DateTime</type>
</CustomField>