force-app/main/default/objects/Zip_Assignment_Change__c/fields/Process_End__c.field-meta.xml
<CustomField>
    <fullName>Process_End__c</fullName>
    <description>The date/time the processing for this change ended.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time the processing for this change ended.</inlineHelpText>
    <label>Process End</label>
    <type>DateTime</type>
</CustomField>