force-app/main/default/objects/Zip_Assignment_Change__c/fields/Process_Start__c.field-meta.xml
<CustomField>
    <fullName>Process_Start__c</fullName>
    <description>The date/time the processing for this change started.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date/time the processing for this change started.</inlineHelpText>
    <label>Process Start</label>
    <type>DateTime</type>
</CustomField>