force-app/main/default/objects/Zip_Assignment_Change__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this change record processed?</description>
    <inlineHelpText>Was this change record processed?</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>