force-app/main/default/objects/Zip_Assignment_Change__c/fields/ProcessTracker__c.field-meta.xml
<CustomField>
    <fullName>ProcessTracker__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The steps the job is going through</inlineHelpText>
    <label>Process Tracker</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>