force-app/main/default/objects/Zip_Assignment_Change__c/fields/QueryAccount__c.field-meta.xml
<CustomField>
    <fullName>QueryAccount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The query for the accounts</inlineHelpText>
    <label>Query - Account</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>