force-app/main/default/objects/Zip_Assignment_Change__c/fields/QueryLead__c.field-meta.xml
<CustomField>
    <fullName>QueryLead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The query for the leads</inlineHelpText>
    <label>Query - Lead</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>