force-app/main/default/objects/Zip_Assignment_Change__c/fields/QueryRefAcct__c.field-meta.xml
<CustomField>
    <fullName>QueryRefAcct__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The query for the Referral Accounts</inlineHelpText>
    <label>Query - Ref Acct</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>