force-app/main/default/objects/Zip_Assignment_Change__c/fields/RecordTypeUpdated__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeUpdated__c</fullName>
    <inlineHelpText>Number of records where the record type was updated.</inlineHelpText>
    <label>Record Type Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>