force-app/main/default/objects/Zip_Assignment_Change__c/fields/Referral_Accounts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Referral_Accounts_Updated__c</fullName>
    <inlineHelpText>The number of referral accounts updated with this change</inlineHelpText>
    <label>Referral Accounts Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>