force-app/main/default/objects/Zip_Assignment_Change__c/fields/Referral_Contacts_Updated__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contacts_Updated__c</fullName>
    <inlineHelpText>The number of Referral Contacts updated as part of this change.</inlineHelpText>
    <label>Referral Contacts Updated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>