force-app/main/default/objects/Zip_Assignment_Change__c/fields/ReferralsEnd__c.field-meta.xml
<CustomField>
    <fullName>ReferralsEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the referral accounts/contacts end?</inlineHelpText>
    <label>Referrals End</label>
    <type>DateTime</type>
</CustomField>