force-app/main/default/objects/Zip_Assignment_Change__c/fields/ReferralsStart__c.field-meta.xml
<CustomField>
    <fullName>ReferralsStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the process for the referral accounts/contacts start?</inlineHelpText>
    <label>Referrals Start</label>
    <type>DateTime</type>
</CustomField>