force-app/main/default/objects/Zip_Assignment_Change__c/fields/Zip_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Zip_Assignment__c</fullName>
    <label>Zip Assignment</label>
    <referenceTo>Zip_Assignment__c</referenceTo>
    <relationshipLabel>Zip Assignment Changes</relationshipLabel>
    <relationshipName>Zip_Assignment_Changes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>