force-app/main/default/objects/Zip_Assignment_Change__c/fields/Zip_Code_Information__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code Information</label>
    <referenceTo>Zip_Code_Information__c</referenceTo>
    <relationshipLabel>Zip Assignment Changes</relationshipLabel>
    <relationshipName>Zip_Assignment_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>