force-app/main/default/objects/Zip_Assignment_Change__c/fields/ZipOkay__c.field-meta.xml
<CustomField>
    <fullName>ZipOkay__c</fullName>
    <formula>Zip_Assignment__r.ZipOkay__c</formula>
    <label>Zip Okay?</label>
    <type>Checkbox</type>
</CustomField>