force-app/main/default/objects/Zip_Assignment_Change__c/fields/ZipSegment__c.field-meta.xml
<CustomField>
    <fullName>ZipSegment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Zip Segment associated with this change</inlineHelpText>
    <label>Zip Segment</label>
    <referenceTo>Zip_Segment__c</referenceTo>
    <relationshipLabel>Zip Assignment Changes</relationshipLabel>
    <relationshipName>ZipAssignmentChanges</relationshipName>
    <type>Lookup</type>
</CustomField>