force-app/main/default/objects/Zip_Assignment_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>Processed__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Accounts_Updated__c</columns>
    <columns>Contacts_Updated__c</columns>
    <columns>Leads_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>