force-app/main/default/objects/Zip_Assignment_Change__c/listViews/Created_before_today_not_processed.listView-meta.xml
<ListView>
    <fullName>Created_before_today_not_processed</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>Sales_Org_Segment__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Created before today not processed</label>
</ListView>