force-app/main/default/objects/Zip_Assignment_Change__c/listViews/HNBF_Processed.listView-meta.xml
<ListView>
    <fullName>HNBF_Processed</fullName>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>Sales_Org_Segment__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Accounts_Updated__c</columns>
    <columns>Contacts_Updated__c</columns>
    <columns>Leads_Updated__c</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Org_Segment__c</field>
        <operation>equals</operation>
        <value>HNBF/TIER1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>HNBF Processed</label>
</ListView>