force-app/main/default/objects/Zip_Assignment_Change__c/listViews/Looking_for_1_Zip.listView-meta.xml
<ListView>
    <fullName>Looking_for_1_Zip</fullName>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>Zip_Code_Information__c</columns>
    <columns>Sales_Org_Segment__c</columns>
    <columns>Accounts_Updated__c</columns>
    <columns>Contacts_Updated__c</columns>
    <columns>Leads_Updated__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zip_Assignment__c</field>
        <operation>startsWith</operation>
        <value>71171</value>
    </filters>
    <label>Looking for 1 Zip</label>
</ListView>