force-app/main/default/objects/Zip_Assignment_Change__c/listViews/Not_Processed_created_by_Charis_Rodrigu.listView-meta.xml
<ListView>
    <fullName>Not_Processed_created_by_Charis_Rodrigu</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processed__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Accounts_Updated__c</columns>
    <columns>Contacts_Updated__c</columns>
    <columns>Leads_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>crrodrig</value>
    </filters>
    <label>Not Processed, created by Charis Rodrigu</label>
    <sharedTo>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>