force-app/main/default/objects/Zip_Assignment_Change__c/listViews/Not_Processed_created_by_Tyla_Johnson.listView-meta.xml
<ListView>
    <fullName>Not_Processed_created_by_Tyla_Johnson</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5)</booleanFilter>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ZipOkay__c</columns>
    <columns>Processed__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>Accounts_Updated__c</columns>
    <columns>Contacts_Updated__c</columns>
    <columns>Leads_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>tmjohns1</value>
    </filters>
    <filters>
        <field>Zip_Assignment__c</field>
        <operation>equals</operation>
        <value>92780,92782</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>tmjohns1</value>
    </filters>
    <label>Not Processed, created by Tyla Johnson</label>
</ListView>