force-app/main/default/objects/Zip_Assignment_Change__c/listViews/Not_Processed_Zip_Okay_MS.listView-meta.xml
<ListView>
    <fullName>Not_Processed_Zip_Okay_MS</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Sales_Org_Segment__c</columns>
    <columns>Zip_Assignment__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Processed__c</columns>
    <columns>Process_Start__c</columns>
    <columns>Process_End__c</columns>
    <columns>ZipOkay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Processed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ZipOkay__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Org_Segment__c</field>
        <operation>startsWith</operation>
        <value>MS</value>
    </filters>
    <label>Not Processed-Zip Okay? - MS</label>
</ListView>